# dbml-to-sqlalchemy

./: .gitignore  LICENSE  README.md  _models.py  dbml2sqlalchemy.py  flasksqla.py  parse-dbml.py  parse.py  pyproject.toml  requirements.txt  schema.dbml  setup.cfg  setup.py
src/dbml2sqlalchemy/: __init__.py  _version.py  dbml2sqlalchemy.py
