[metadata]
name = dbml2sqlalchemy
version = attr: dbml2sqlalchemy.__version__
author = Ralf Schulze
author_email = ralf.schulze@gmx.net
description = Converter for DBML files into SQLAlchemy classes
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ralfschulze/dbml-to-sqlalchemy
project_urls =
    Bug Tracker = https://github.com/ralfschulze/dbml-to-sqlalchemy/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent


[options]
package_dir =
    = src

include_package_data = True
python_requires = >=3.10
install_requires =
    pydbml>=1.0.9

[options.entry_points]
console_scripts =
    dbml2sqlalchemy = dbml2sqlalchemy.dbml2sqlalchemy:main
